# qwirkle-elm-rust

./: .gitignore  start.sh  test.sh
backend/: Cargo.toml
backend/migrations/: 001_initial.sql
backend/src/: config.rs  lib.rs  main.rs
backend/src/api/: action.rs  auth.rs  error.rs  game.rs  instant_game.rs  mod.rs  player.rs  sse.rs  user_prefs.rs
backend/src/api/middleware/: auth.rs
backend/src/db/: repository.rs
backend/src/domain/: ai.rs  color.rs  error.rs  game.rs  mod.rs  player.rs  rules.rs  shape.rs  tile.rs
backend/src/neural/: graph_transformer.rs  mod.rs  model_io.rs  tensor_conversion.rs
backend/src/sse/: broker.rs  event.rs  mod.rs
backend/tests/: api_integration.rs
frontend/: elm.json
frontend/js/: ports.js
frontend/src/: Main.elm  Port.elm  Route.elm  Sse.elm
frontend/src/Api/: Action.elm  Auth.elm  Game.elm  Http.elm  InstantGame.elm  UserPrefs.elm
frontend/src/Page/: Game.elm  Lobby.elm  Login.elm  Opponents.elm  Register.elm  Waiting.elm
frontend/src/Types/: Color.elm  Game.elm  Player.elm  Shape.elm  Tile.elm
frontend/src/View/: Board.elm  Rack.elm  Scoreboard.elm  Tile.elm
frontend/static/: index.html  style.css
frontend/tests/: ColorTest.elm  GamePageTest.elm  GameTest.elm  RouteTest.elm  ShapeTest.elm  SseTest.elm  TileTest.elm
